force-app/main/default/objects/Account/fields/Is_Commerce_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Is_Commerce_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this account is enabled as a B2B Commerce buyer and assigned to a buyer group.</description>
    <label>Commerce Buyer</label>
    <type>Checkbox</type>
</CustomField>