force-app/main/default/objects/Account/fields/Operating_Region__c.field-meta.xml
<CustomField>
    <fullName>Operating_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary operating region used to assign buyer groups, territories, and merchandising queues.</description>
    <label>Operating Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>