force-app/main/default/objects/Account/fields/Ship_To_Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country_ISO__c</fullName>
    <description>ISO country used to align the account with a Commerce Market ship-to country.</description>
    <label>Ship-To Country ISO</label>
    <length>2</length>
    <type>Text</type>
</CustomField>